[tool.poetry]
name = "qiita-sync"
version = "0.1.0"
description = ""
authors = ["wak109 <wak109@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.910"
yapf = "^0.31.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "yapf"
column_limit = 119
indent_width = 4
