[tool.poetry]
name = "qiita-sync"
version = "1.3.4"
description = "Synchronize GitHub with Qiita"
authors = ["Ryoji Kato <ryokat3@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ryokat3/qiita-sync"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.910"
yapf = "^0.31.0"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "yapf"
column_limit = 119
indent_width = 4

[tool.poetry.scripts]
qiita_sync = 'qiita_sync:main'
